--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-#Ignore common config files
+#Ignore common config and log files
 *.ini
+*.txt
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows
